# gdcli

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  bash.exe.stackdump  install.ps1  install.sh
.agent/skills/: common-errors.md  gdscript-patterns.md  project-layout.md  scene-structure.md  signal-patterns.md
.agent/workflows/: godot-dev-loop.md
.github/workflows/: ci.yml  release.yml
benchmark/: CHECKLIST-hard.md  CHECKLIST.md  RESULTS.md  SPEC-hard.md  SPEC.md  prompt-bare.md  prompt-gdcli.md  prompt-godot-mcp.md  prompt-hard-bare.md  prompt-hard-gdcli.md  score-hard.sh  score.sh
benchmark/runs/bare-1/: project.godot
benchmark/runs/bare-1/scenes/: credits.tscn  game.tscn  main_menu.gd  main_menu.tscn  settings.gd  settings.tscn
benchmark/runs/bare-2/: project.godot
benchmark/runs/bare-2/scenes/: game.tscn  (+3 more)
benchmark/runs/gdcli-1/: project.godot
benchmark/runs/hard-bare-1/: project.godot
benchmark/runs/hard-gdcli-1/: project.godot
docs/: gdcli-plan.md
npm/: install.js  package.json
src/: docs_parser.rs  errors.rs  godot_finder.rs  lib.rs  main.rs  output.rs  project_util.rs  runner.rs  scene_parser.rs  session.rs
src/commands/: connection.rs  docs.rs  doctor.rs  mod.rs  node.rs  project.rs  run.rs  run_session.rs  scene.rs  script.rs  setup.rs  sprite.rs  sub_resource.rs  uid.rs
src/mcp/: dispatch.rs  mod.rs  protocol.rs  tools.rs
tests/: cli_integration.rs  corpus_test.rs  fetch_corpus.sh  fixture_parse.rs  godot_oracle.rs
tests/common/: mod.rs
tests/fixtures/: all_types.tscn  complex.tscn  minimal.tscn  no_uid.tscn
(+26 files in other folders)
