[package]
name = "gdcli"
version = "0.2.2"
edition = "2021"
description = "Agent-friendly CLI for Godot 4"
license = "MIT"
repository = "https://github.com/mystico53/gdcli"
homepage = "https://github.com/mystico53/gdcli"
readme = "README.md"
keywords = ["godot", "cli", "gamedev", "gdscript", "linter"]
categories = ["command-line-utilities", "development-tools", "game-development"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
which = "6"
colored = "2"
wait-timeout = "0.2"
quick-xml = "0.37"
